--- a/public/stat120/Day24.Rmd
+++ b/public/stat120/Day24.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Day 27: Extra Materials"
+title: "Regression and ANOVA "
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -29,7 +29,7 @@ options(htmltools.preserve.raw = FALSE)
 options(ggrepel.max.overlaps = Inf)
 
 knitr::opts_chunk$set(echo = TRUE, 
-                      dev = 'svg', 
+                      dev = 'svg',
                       collapse = FALSE, 
                       comment = NA,  # PRINTS IN FRONT OF OUTPUT, default is '##' which comments out output
                       prompt = FALSE, # IF TRUE adds a > before each code input
@@ -60,7 +60,6 @@ library(DT)
 library(knitr)
 library(grid)
 library(gridExtra)
-library(tikzDevice)
 
 
 select <- dplyr::select
@@ -92,7 +91,7 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Introduction to Random Variables and distributions]
+# .fancy[Regression and ANOVA]
 
 ### .fancy[Stat 120]
 
@@ -100,27 +99,719 @@ class: title-slide, middle
 
 ---
 
+
+# Simple Linear Model
+
+
+.hljs[
+The population/true simple linear model is:
+
+\begin{align*}
+y=\beta_{0}+\beta_{1} x+\varepsilon
+\end{align*}
+]
+
+.bql[
+- $\beta_{0}$ and $\beta_{1}$ are unknown parameters corresponding to the y-intercept and the slope, respectively
+- $\varepsilon$ is the random error
+- Estimate with $b_{0}$ and $b_{1}$ from the least squares line $\hat{y}=b_{0}+b_{1} x$
+]
+
+--
+
+.out-t[How accurate are the estimates? ]
+
+---
+
+### Recall: Least Square Regression
+
 .pull-left[
-Random Variable (RV)
-- a variable whose value is a numerical outcome of a random process.
-- Notation: $P(X=X)$ means the probability that $R V X$ equals the number given by $X$.
 
-Example: flip a coin twice - $X=\#$ of Heads observed
+.hljs[
+X = Cricket chirp rate
 
-![](https://tenor.com/view/coin-flip-flip-coin-gif-19747326)
+Y = Temperature
+]
 
+
+```{r, echo=FALSE}
+data <- data.frame(Chirps = c(81, 97, 103, 123, 150, 182, 195),
+                   Temp = c(54.5, 59.5, 63.5, 67.5, 72.0, 78.5, 83.0))
+
+knitr::kable(data, format = "html")
+```
+
+
+]
+.pull-right[
+
+\begin{align*}
+\widehat{\text { Temp }}=37.7+0.23 \text { Chirps }
+\end{align*}
+
+```{r, echo=FALSE}
+ggplot(data, aes(x = Chirps, y = Temp)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE)
+```
+
+]
+
+--
+
+<center>
+<div style="position: absolute; top: 25%; left: 35%;">
+<span style="content: '\2192'; font-size: 30px; color: #920; text-align: center; white-space: pre-line;">
+  <p>What are the parameters being estimated? </p>
+   <i class="gg-arrow-long-right"></i>
+</span>
+</div>
+</center>
+
+---
+
+# Inference for the Slope
+
+.bql[
+Confidence intervals and hypothesis tests for the slope can be done using the familiar .b[formulas]:
+
+\begin{align*}
+b_{1} \pm t^* \cdot S E \qquad\qquad t=\frac{b_{1}-\text { null slope }}{S E}
+\end{align*}
+
+]
+
+--
+
+<br>
+
+.b[
+But how do we estimate the .b[standard error]?
+- Bootstrap/Randomization distributions
+- Computer output
+]
+
+---
+
+# [Statkey:](https://www.lock5stat.com/StatKey/index.html) Standard Error Using a Bootstrap Distribution
+
+<center>
+<img src="images/regression-bootstrap.png" width="80%" height="80%"> <br>
+</center>
+
+---
+
+class: middle
+
+# Technology Examples
+
+### Slope estimate and Standard Error
+
+.font120[
+```{r, eval=FALSE}
+chirps.lm <- lm(Temp ~ Chirps, data = data)
+summary(chirps.lm)
+```
+]
+
+```
+Coefficients:
+            Estimate Std. Error t value Pr(>|t|)    
+(Intercept) 37.67858    1.97817   19.05 7.35e-06 ***
+Chirps       0.23067    0.01423   16.21 1.63e-05 ***
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+Residual standard error: 1.528 on 5 degrees of freedom
+Multiple R-squared:  0.9813
+```
+
+---
+
+class: middle
+
+# Confidence Interval for Slope
+
+```
+Coefficients:
+            Estimate Std. Error t value Pr(>|t|)    
+(Intercept) 37.67858    1.97817   19.05 7.35e-06 ***
+Chirps       0.23067    0.01423   16.21 1.63e-05 ***
+```
+
+.hljs[
+We can use the values for $b_1$ and $SE$ from the regression output to form a confidence interval in the usual way:
+\begin{align*}
+b_{1} \pm t^{*} \cdot S E
+\end{align*}
+]
+
+.b[
+Here, $t^{*}$ uses $n-2$ degrees of freedom, since we are estimating two parameters in the simple linear model.
+]
+---
+
+class: middle
+
+# Confidence Interval for Slope
+
+
+.bqt[Find a 95% confidence interval for the slope of the cricket temperature model.]
+
+```r
+Temperature  =  37.7 + 0.231 Chirps
+Predictor       Coef    SE Coef      T    Pr(>|t|)    
+Constant    37.67858    1.97817   19.05  7.35e-06 ***
+Chirps       0.23067    0.01423   16.21  1.63e-05 ***
+```
+
+.hljs[
+\begin{align*}
+b_{1} \pm t^* \cdot S E
+\end{align*}
+]
+
+---
+
+# Hypothesis Test for Slope
+
+.bql[Population Simple Linear Model: $y=\beta_{0}+\beta_{1} x+\varepsilon$
+
+\begin{align*}
+H_0& : \beta_1 = 0  \qquad \Longrightarrow \text{ No linear relationship }\\
+H_a& : \beta_1 \neq 0  \qquad  \Longrightarrow \text{ Some relationship }
+\end{align*}
+
+
+\begin{align*}
+t=\frac{\text { statistic-null }}{S E}=\frac{b_{1}-0}{S E}=\frac{b_{1}}{S E}
+\end{align*}
+]
+
+<br>
+
+.bq.font90[
+- Again, $\boldsymbol{b}_{1}$ and SE come from R output.
+- We find the p-value by using a $t$ distribution with $n-2 \mathrm{ df}$.
+]
+
+---
+
+class: middle
+
+# Hypothesis Test for Slope
+
+.bql[
+Confirm the .b[p-value] given by the regression output for testing the slope of the cricket chirp model.
+]
+
+```r
+Temperature  =  37.7 + 0.231 Chirps
+Predictor       Coef    SE Coef      T    Pr(>|t|)    
+Constant    37.67858    1.97817   19.05  7.35e-06 ***
+Chirps       0.23067    0.01423   16.21  1.63e-05 ***
+```
+
+.hljs[
+.pull-left[
+.blockquote[
+\begin{align*}
+H_0 :& \beta_1 = 0 \\
+H_a :& \beta_1 \neq 0
+\end{align*}
+]
+]
+.pull-right[
+.blockquote[
+\begin{align*}
+t=\frac{b_{1}}{S E}
+\end{align*}
+]
+]
+]
+
+---
+
+class: middle
+
+# Conditions for the test
+
+.bql.font80[
+- .b[Linearity] $\rightarrow$ randomly scattered residuals around 0 in the residuals plot 
+- .b[Nearly normally distributed residuals] $\rightarrow$ QQ-plot plot of residuals
+- .b[Constant variability of residuals (homoscedasticity)] $\rightarrow$ constant vertical spread of the residuals in residual plot, no patterns
+- .b[Independence of residuals (and hence observations)] $\rightarrow$ depends on data collection method, often violated for time-series data
+]
+
+
+.out-t[If interested to learn more about this, take .green[STAT 230: Applied Linear Regression] next quarter!]
+
+
+---
+
+class: middle
+
+# Standard Error of the Slope
+
+.bq[
+Although we generally rely on technology to obtain the SE for the slope, we can also obtain it as follows:
+\begin{align*}
+S E=\frac{s_{\varepsilon}}{s_{x} \sqrt{n-1}}
+\end{align*}
+
+where $s_{\varepsilon}$ is the standard deviation of the error term and $s_{x}$ is the standard deviation for the sample values of the predictor. 
+
+]
+
+---
+
+# SE for Slope
+
+
+.pull-left-60[
+
+.hljs[
+The regression equation is
+$\widehat{Temperature}  =  37.7 + 0.231\text{ Chirps}$
+]
+
+.code70[
+```{r, eval=FALSE}
+Predictor       Coef    SE Coef      T    Pr(>|t|)    
+Constant    37.67858    1.97817   19.05  7.35e-06 ***
+Chirps       0.23067    0.01423   16.21  1.63e-05 ***  
+
+s = 1.52778   R-Sq = 98.1%   R-Sq(adj) = 97.8% #<<
+```
+]
+]
+.pull-right-40[
+<br>
+<br>
+```{r, echo=FALSE}
+library(dplyr)
+stat <- data %>% 
+  summarize(mean(Chirps), 
+            sd(Chirps), 
+            length(Chirps))%>%
+  `colnames<-`(c( "Mean", "Standard Dev.", "n"))
+stat <- t(as.data.frame(stat))
+stat <- stat %>% 
+  `colnames<-`(c( "Chirps"))
+knitr::kable(stat)
+```
+
+
+]
+
+<br>
+
+.hljs[
+\begin{align*}
+S E=\frac{s_{\varepsilon}}{s_{x} \sqrt{n-1}}=\frac{\sqrt{M S E}}{s_{x} \sqrt{n-1}}= \frac{1.528}{43.84\cdot \sqrt{7-1}} = 0.01423
+\end{align*}
+]
+
+---
+
+# Hypothesis Test for Correlation
+
+.bqt[How else can we measure the strength of association between two quantitative variables?]
+
+--
+
+.hljs[
+.b[Recall:] $r$ = sample correlation, $\rho$ = population correlation
+]
+
+
+--
+
+.hljs[
+.pull-left-40[
+.b[
+\begin{align*}
+H_0 :& \rho = 0 \\
+H_a :& \rho \neq 0
+\end{align*}
+
+Find the p-value using a t-distribution with n - 2 df
+
+]
+]
+.pull-right-60[
+.b[
+\begin{align*}
+t & =\frac{\text { statistic -null }}{S E}=\frac{r-0}{\sqrt{\frac{1-r^{2}}{n-2}}} = =\frac{r}{\frac{\sqrt{1-r^{2}}}{\sqrt{n-2}}}\\&=\left(\frac{r \sqrt{n-2}}{\sqrt{1-r^{2}}}\right)
+\end{align*}
+
+]
+]
+]
+
+---
+
+# Hypothesis Test for Correlation
+
+.bqt[The correlation for the .b[n = 7] cricket chirp data points is .b[r = 0.99062]. Compute the t-statistic for the test:]
+
+.hljs[
+\begin{align*}
+H_0 :& \rho = 0 \\
+H_a :& \rho \neq 0
+\end{align*}
+
+\begin{align*}
+t & =\left(\frac{r \sqrt{n-2}}{\sqrt{1-r^{2}}}\right)\\
+&=\frac{0.99062 \sqrt{7-2}}{\sqrt{1-0.99062^{2}}}=16.21
+\end{align*}
+]
+
+---
+
+# Coefficient of Determination, $R^2$
+
+.hljs[
+.blue-h[Recall that for correlation:] $-1 \leq r \leq 1$
+
+If we square the correlation, we get the .b[coefficient of determination], which is a number between 0 and 1 that can be interpreted as a proportion or percentage.
+]
+
+<br>
+
+.bql[
+
+$R^{2}=$ proportion of .b[variability] in the response variable, $Y$, that is "explained" by the explanatory variable, $X$.
+
+- By convention we use a capital $R^2$, although the value is just $r^2$ for a single explanatory variable.
+]
+
+---
+
+# Checking Condition
+
+.hljs[
+\begin{align*}
+y=\beta_{0}+\beta_{1} x+\varepsilon
+\end{align*}
+
+For a simple linear model, we assume the errors $(\varepsilon)$ are randomly distributed above and below the line.
+]
+
+<br>
+
+.bql.font80[.b[Quick check] : Look at a scatterplot with regression line on it. Watch out for:
+- Curved (nonlinear) patterns in the data
+- Consistently changing variability
+- Outliers and influential points
+
+]
+---
+
+
+## Scatterplot: Check linearity and consistent variability
+
+<center>
+<img src="images/regression-bad-1.png" width="55%" height="60%"> <br>
+<a>Problem</a>
+</center>
+
+---
+
+## Scatterplot: Check linearity and consistent variability
+
+<center>
+<img src="images/regression-bad-2.png" width="55%" height="60%"> <br>
+<a>Problem</a>
+</center>
+
+
+---
+
+
+## Scatterplot: Check linearity and consistent variability
+
+<center>
+<img src="images/regression-good1.png" width="55%" height="60%"> <br>
+<a>Good</a>
+</center>
+
+---
+
+# Scatterplot: Check for outliers or influential points
+
+
+<center>
+<img src="images/regression-outliers.png" width="90%" height="36%"> 
+</center>
+
+---
+
+class: middle
+
+# Partitioning Variability
+
+.hljs[
+\begin{align*}
+Y=\beta_{0}+\beta_{1} X+\varepsilon
+\end{align*}
+
+\begin{align*}
+\text { Data }=\text { Model }+\text { Error }
+\end{align*}
+
+.b[Split the total variability in Y into two pieces, variability explained by the model + unexplained (residual error) variability]
+]
+
+
+<center>
+<img src="images/anova-variability.png" width="100%" height="30%"> 
+</center>
+
+
+---
+
+class: middle
+
+# Measuring Variability
+
+<center>
+<img src="images/anova-variability.png" width="100%" height="30%"> 
+</center>
+
+
+.bqt[
+Total variability in $Y: \quad$ $SSTotal$ $=\sum(y-\bar{y})^{2}$
+
+Explained variability: $\quad$ $SSModel$ $=\sum(\hat{y}-\bar{y})^{2}$
+
+Unexplained variability: $\quad S S E=\sum(y-\hat{y})^{2}$
+]
+
+---
+
+# Graphically
+
+.hljs[
+$$Y=\beta_{0} + \beta_{1} X+\varepsilon \qquad \qquad \text { Data }=\text { Model }+\text { Error }$$
+]
+
+<center>
+<img src="images/residual-deviations.png" width="60%" height="60%"> 
+</center>
+
+---
+
+# R: Calories Vs. Sugars
+
+.pull-left[
+```{r}
+library(Lock5Data)
+model <- lm(Calories~Sugars, data = Cereal)
+anova(model)
+```
 ]
 
 .pull-right[
+```{r}
+ggplot(Cereal, aes(x = Sugars, y = Calories)) +
+  geom_point() +
+  geom_smooth(method="lm", se = FALSE)
+```
+
 
 ]
 
 ---
 
+class: middle
 
+# $R^2$ in Regression
+
+
+.pull-left[
+```{r}
+library(Lock5Data)
+model <- lm(Calories~Sugars, data = Cereal)
+anova(model)
+```
+]
+
+.pull-right[
+.hljs[
+\begin{align*}
+R^{2} & =\frac{\text { Variability explained by Model }}{\text { Total variability in } \mathrm{Y}}\\
+R^{2} & =\frac{\text { SSModel }}{\text { SSTotal }}\\
+R^{2}&= \frac{15316}{15316+19834} \\
+R^{2}&=  0.4357
+\end{align*}
+]
+]
+
+---
+
+class: middle
+
+# R: Calories Vs. Sugars
+
+```{r}
+mod <- lm(Calories~Sugars, data = Cereal)
+summary(mod)
+```
 
 
 ---
+
+class: middle
+
+# ANOVA for Regression
+
+.pull-left-40[
+.hljs[
+\begin{align*}
+H_0 :& \beta_1 = 0 \\
+H_a :& \beta_1 \neq 0
+\end{align*}
+]
+]
+
+.pull-right-60[
+.b[
+\begin{align*}
+H_{0}& : \text{ The model is ineffective}\\
+H_{a}& : \text{ The model is effective}
+\end{align*}
+]
+]
+
+<br>
+
+.font140[
+Source | df | Sum of Squares   | Mean Square | F-statistic | p-value
+-------- | ------------- | ----------- | ----------- | -------------- |
+Model | 1 |  SSModel | $\frac{SSModel}{1}$  | $F = \frac{MSModel}{MSE}$ | $P(F_{1,n-2} > F)$
+Error | n - 2  | SSE  | $\frac{SSE}{n-2}$ |  |   
+Total |  n-1| SSTotal  | | | 
+]
+
+---
+
+class: middle
+
+
+# P-value for Regression ANOVA
+
+.bql[
+To find a $p$-value for the ANOVA $F$-statistic:
+- Create a randomization distribution, OR
+- Use a theoretical distribution
+
+For a randomization distribution, we need to obtain samples where $\mathrm{H}_{0}: \beta_{1}=0$ is true:
+- Randomly scramble the response $(Y)$ values
+- Compute the ANOVA F-statistic for each sample
+]
+
+---
+
+class: middle
+
+# Randomization distribution
+
+<center>
+<img src="images/F-randomization.png" width="80%" height="60%"> 
+</center>
+
+
+---
+
+class: middle
+
+# Theoretical Distribution: F-distribution
+
+.bql[
+For testing an F-statistic (which is a ratio of variances)
+- Use an F-distribution, specifying the degrees of freedom for both the numerator and the denominator.
+]
+
+
+.b[
+When performing an ANOVA for Regression with a single predictor:
+- 1 df (numerator)
+- $n-2$ df (denominator)
+- Then use the upper tail beyond the $F$-statistic
+]
+
+---
+
+class: middle
+
+# Std. Dev. of Error in Regression
+
+.bql[
+\begin{align*}
+Y=\beta_{0}+\beta_{1} X+\varepsilon
+\end{align*}
+
+.b[Condition:] The random errors $(\varepsilon)$ have a common standard deviation, $\sigma_{\varepsilon}$
+
+.b[Estimation:]
+
+\begin{align*}
+s_{\varepsilon}=\sqrt{\frac{\sum(y-\hat{y})^{2}}{n-2}}=\sqrt{\frac{S S E}{n-2}}=\sqrt{M S E}
+\end{align*}
+]
+
+---
+
+class: middle
+
+## Identifying outliers in linear regression
+
+.pull-left-60[
+
+.bqt.font80[
+.b[Leverage points] far away in the horizontal direction, do not changes slope. 
+
+.b[Influential points], slope changes with and without the influential point. 
+
+.b[Outliers] are points that are unusual and typically only affect the intercept of the data. 
+]
+]
+
+.pull-right-40[
+
+```{r, echo=FALSE}
+#Generating a Sample Dataset 
+x <- c(1.2, 3.4, 4.5, 5.7, 7.8, 9.4, 11.4, 13.4, 15.4, 17.4, 20.4, 23.4, 26.4, 28.4, 30.4)
+y <- c(1.4, 4.3, 5.6, 7.2, 9.3, 11.8, 14.3, 17.9, 20.7, 24.4, 27.7, 31.4, 35.2, 38.4, 42.2)
+#Creating the Scatterplot
+
+library(ggplot2)
+df = data.frame(x = x, y = y)
+ggplot(data = df, aes(x = x, y = y)) +
+  geom_point(shape = 9, color = 'black', , size = 3) + 
+  geom_smooth(method = lm, se = FALSE) +
+  theme(axis.text.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.ticks.y = element_blank(),
+        plot.title = element_blank()) +
+   scale_x_continuous(limits = c(min(x), 42)) +
+  scale_y_continuous(limits = c(min(y), 55)) +
+  labs(x = "", y = "")+
+  geom_point(x = 13, y = 40, shape = 3, color = 'blue', size = 3) +
+  geom_text(x = 13, y = 37, label = 'Outlier', color = 'blue') +
+  geom_point(x = 38, y = 53, shape = 3, color = 'red', size = 3) +
+  geom_text(x = 38, y = 50, label = 'Leverage', color = "red") +
+  geom_point(x = 38, y = 10, shape = 3, color = 'green', size = 3) +
+  geom_text(x = 38, y = 7, label = 'Influential', color = 'green') 
+
+```
+
+]
+
+---
+
 
 class: action
 
@@ -140,481 +831,4 @@ class: action
 ]
 ]
 
-`r countdown(minutes = 3, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
-
-
----
-
-# Predictions
-
-.blockquote[
-For a single predictor model and a particular value $(x^*)$ of the predictor, the predicted response is
-
-\begin{align*}
-\hat{y}=b_{0}+b_{1} x^{*}
-\end{align*}
-]
-
---
-
-<br>
-
-.out-t[How accurate is the prediction?]
-
-.blockquote-list[
-Two kinds of intervals:
-
-1. Confidence Interval (CI) for Mean $Y$
-2. Prediction Interval (PI) for Individual $Y^{\prime} S$
-]
-
----
-
-# CI vs. PI: What’s the difference?
-
-.blockquote[
-If we want to be 95% sure that we have captured the
-average price for all ink-jet printers that cost 10 cents
-per page to print in color 
-
-\begin{align*}
-\Longrightarrow \text { Confidence interval for the mean  Y}
-\end{align*}
-
-]
-
-<br>
-
-.blockquote[
-If we want to be 95% sure that we have captured the
-price for a particular ink-jet printer that cost 10 cents
-per page to print in color 
-\begin{align*}
-\Longrightarrow \text { Prediction interval for the individual Y }
-\end{align*}
-]
-
----
-
-
-# CI for Regression
-
-.blockquote[
-A CI for mean Y tries to capture the “true” line for the population. 
-]
-
---
-
-<br>
-
-.out-t[How much might the fitted line vary from sample to sample? ]
-
-
----
-
-# Regression Intervals (1c)
-
-.blockquote[We generally use statistical software to
-provide the confidence intervals for
-regression predictions]
-
-
-
-```{r}
-# new data frame with the new x*
-newx = data.frame(CostColor=9.0)
-predict(mod1,newx, interval="confidence",  level = 0.95)
-```
-
-
----
-
-# CI for Mean Y at each x*
-
-.pull-left[
-.blockquote.font90[
-- Trying to capture the line 
-
-- Not trying to capture individual data values 
-
-- The $\mathrm{Cl}$ gets wider for more extreme predictor values
-]
-]
-.pull-right[
-```{r, echo=FALSE}
-ggplot(inkjet, aes(x=CostColor, y=Price))+ theme_classic()+
-    geom_point()+
-    geom_smooth(method=lm, se=TRUE)
-```
-]
-
---
-
-.out-t.font90[What about capturing individual values?]
-.hljs.font90[The cost to print a color page from my ink-jet printer is 9 cents. Give me an interval that is 95% sure to capture the price of my ink-jet printer.]
-
----
-
-# Prediction Interval for Individual Y
-
-.blockquote.font80[
-We need to account for both the uncertainty in estimating the population mean and the random variability (error) of the individual values. 
-]
-
-<center>
-<img src="images/residual-variation.png" width="60%" height="60%"> <br>
-</center>
-
----
-
-# Regression Intervals (1d)
-
-.blockquote[
-We generally use statistical software to provide the prediction intervals for regression
-]
-
-```{r}
-# new data frame with the new x*
-newx=data.frame(CostColor=9)
-predict(mod1,newx, interval="prediction", level = 0.95)
-```
-
----
-
-# PI for Price when $x^*=9$
-
-<center>
-<img src="images/prediction-interval.png" width="60%" height="60%"> <br>
-</center>
-
----
-
-# PI for Individual Y at each $x^*$
-
-<center>
-<img src="images/PI-bounds.png" width="50%" height="50%"> <br>
-</center>
-
---
-
-.out-t[The PI bounds capture all the data values]
-
---
-
----
-
-# Question!
-
-.blockquote-list[
-One of the following is a confidence interval for the mean value and the other is a prediction interval for individual values, both for predicting the body fat percentage for a male with an abdominal circumference of 90 cm. Which is the confidence interval?
-
-A. $16.5$ to $18.4$
-
-в. $8.0$ to $26.8$
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is A. (since it is narrower)
-</details>
-
----
-
-class: middle
-
-# Computation: CI Mean Y when $X=x^*$ (1e)
-
-.blockquote-list.font120[
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-]
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $211.60$
-
-B. $211.16$
-
-c. $250$
-
-D. $211.00$
-
-E. $200.16$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
----
-
-### Use StatKey or R to identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $1.674$
-
-B. $1.96$
-
-c. $2.101$
-
-D. $4.83$
-
-E. $8.09$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $10.08$
-
-B. $66.09$
-
-c. $4369$
-
-D. $280.42$
-
-E. $120.71$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $8.4$
-
-B. $9.8$
-
-С. $9.2$
-
-D. $10$
-
-E. $10.2$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. 20
-
-B. 18
-
-c. 19
-
-D. 21
-
-E. 2
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $11.35$
-
-B. $11.67$
-
-c. $13.53$
-
-D. $9.63$
-
-E. $10$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
----
-
-### Identify the circled value in the 95% CI formula for the mean Price when `CostColor = 9`.
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.pull-left-40[
-A. $2.97$
-
-В. $2.90$
-
-с. $8.76$
-
-D. $1.72$
-
-E. $3.00$
-]
-
-.pull-right-60.font80[
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-```
-
-]
-
-<br>
-<details>
-<summary>.large.red[Click for answer]</summary>
-The correct answer is 
-</details>
-
-
----
-
-## 95% CI for the mean Price when `CostColor = 9`. (1e)
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{\frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-```{r, collapse=TRUE}
-summary(inkjet$CostColor)
-sd(inkjet$CostColor)
-anova(mod1)
-newx=data.frame(CostColor=9)
-predict(mod1,newx, interval="confidence", level = 0.95)
-```
-
----
-
-class: middle
-
-# Computation: PI for Individual Y when $X=x^*$ (1f)
-
-$$\begin{equation}
-\hat{y} \pm t^{*} S_{\varepsilon} \sqrt{1 + \frac{1}{n}+\frac{\left(x^{*}-\bar{x}\right)^{2}}{(n-1) s_{x}^{2}}}
-\end{equation}$$
-
-.blockquote[
-Accounts for additional variability from an individual random error, $\varepsilon$
-]
-
-```{r, collapse=TRUE}
-newx=data.frame(CostColor=9)
-predict(mod1,newx, interval="prediction", level = 0.95)
-```
-
-
-
-
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
