--- a/static/stat120/Day4.Rmd
+++ b/static/stat120/Day4.Rmd
@@ -339,18 +339,22 @@ round(ans,2)
 
 # Difference in proportions
 
-.bq[A difference in proportions is a difference in proportions for one categorical variable calculated for different levels of the other categorical variable]
+.bq.font90[A difference in proportions is a difference in proportions for one categorical variable calculated for different levels of the other categorical variable]
 
- - Example: $\text{proportion}_{\text{Females}}$ - $\text{proportion}_{\text{Males}}$
+ - Example: Difference in proportions of male and female that are in a relationship:
+ 
+\begin{align}
+  \text{proportion}_{\text{Females}} - \text{proportion}_{\text{Males}} = 
+  \hat{p}_F - \hat{p}_M = \frac{32}{107} - \frac{10}{62} = 0.14
+\end{align}
 
- $$\hat{p}_F - \hat{p}_M = \frac{32}{107} - \frac{10}{62} = 0.14$$
 
 ```{r}
 # R-code
 prop.female <- 32/107
 prop.male <- 10/62
 prop.diff <- prop.female - prop.male
-round(prop.diff,2)
+round(prop.diff,2) # round the final answer to 2 significant digits
 ```
 
 ---
@@ -393,29 +397,7 @@ plot_ly(data, x = ~Gender, y = ~In_a_relationship, type = 'bar', name = 'In a re
 
 ---
 
-class: action
-
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
-
-.pull-left-40[
-![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
-]
-.pull-right-60[
-
-<br>
-<br>
-.bq[
-
-- Let's go over this [article](https://features.apmreports.org/in-the-dark/mississippi-da-doug-evans-striking-black-people-from-juries/)
-- Download the Class Activity .Rmd file for today and skim through the corresponding problems
-]
-]
-
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
-
----
-
-# Flowers v. Mississippi
+# Case Study:` Flowers v. Mississippi`
 
 .bql.font80[2019 Supreme Court case:
 - Has Mississippi prosecutor Doug Evans deliberately use “peremptory challenges” to strike black jurors from jury pools?
@@ -485,17 +467,41 @@ prop.table(counts)
 
 ---
 
-`r chunk_reveal("bar-plot", font_size_code="50%",widths = c(0.6, 0.4), title = "## Graphical summary: bar plot")`
+
+class: action
+
+# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Group&nbsp;Work&nbsp;`r (yt <- yt + 1)`</i>       
+
+.pull-left-40[
+![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
+]
+.pull-right-60[
+
+<br>
+<br>
+.bq[
+
+- Let's go over a tutorial on data visualization in R using `ggplot2` on [course helper page](https://stat120-fall23.netlify.app/tutorial-2-dive-deeper-into-data-visualization-and-statistics-in-r)
+]
+]
+
+`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+
+
+
+
+
+
+
+---
+
+`r chunk_reveal("bar-plot", font_size_code="50%",widths = c(0.6, 0.4), title = "## Graphical summary: bar plot using ggplot2")`
 
 ```{r bar-plot, include=FALSE}
 library(ggplot2)  # load the library
-counts_df <- data.frame(x=c("Not Struck by State", "Struck by State"),
-                        y=c(1084, 433))
-ggplot(counts_df, aes(x=x, y=y)) +
-  geom_col(fill="lightblue") +
-  labs(x="", y="Count", title="Counts") 
+ggplot(jurors, aes(x=struck_state)) +
+  geom_bar(fill="maroon") 
 ```
-
 
 ---
 
@@ -527,7 +533,7 @@ jurors[(1:10), (2:3)]
 
 .font80[`table` gives two-way tables when two variables are included.] 
 
-.code80[
+.code70[
 ```{r}
 mytable <- table(jurors$race, jurors$struck_state)
 mytable
@@ -605,7 +611,7 @@ ggplot(jurors, aes(x = race, fill = struck_state)) +
 
 class: action
 
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Group&nbsp;Work&nbsp;`r (yt <- yt + 1)`</i>       
 
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
@@ -616,12 +622,11 @@ class: action
 <br>
 .bq[
 
-- Please go over the in-class activity 
-- Talk to your neighbor
-- Let me know if you have any questions
+- Let's go over some more examples at the [course helper page](https://stat120-fall23.netlify.app/)
+- We will then do a class activity together
 ]
 ]
 
-`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 20, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
 
